# cocoon

./: .cocoon-plan.md  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  access_log.c  access_log.h  acme.c  acme.h  cache.c  cache.h  cocoon.h  cocoon.json  cocoon.service  commit_msg.txt  config.c  config.h  dashboard.c  dashboard.h  fastcgi.c  fastcgi.h  fcgi_handler.c  fcgi_handler.h  grpc.c  grpc.h  healthcheck.c  healthcheck.h  http.c  http.h  http2.c  http2.h  http3.c  http3.h  load_balance.c  load_balance.h  log.c  log.h  (+27 more)
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml
coco/include/: coco.h
examples/www/: index.html
plugins/: hello.c
tests/: benchmark.sh  http10_backend.py  https_backend.py  integration_test.sh  server.crt  server.key  websocket_test.py
tests/fixtures/: api.json  app.js  index.html  reload_test.json  style.css
tests/fixtures/subdir/: page.html
tests/fixtures/vhost_a/: index.html
tests/fixtures/vhost_b/: index.html
tests/unit/: test_acme.c  test_acme_config.c  test_cache.c  test_config  test_config.c  test_dashboard.c  test_fastcgi.c  test_grpc.c  test_healthcheck  test_healthcheck.c  test_http  test_http.c  test_http3.c  test_http_asan  test_load_balance.c  test_log  test_log.c  test_middleware_ext.c  test_multipart.c  test_proxy.c  test_server.c  test_sse  test_sse.c  test_static  test_static.c  test_websocket.c
www/: index.html
